# ROS2-moveit2-ros_control-UR5e-

./: .gitignore  README.md
docs/: kinematics_interview_guide.md
docs/media/: README.md
docs/ppt_assets/: README.md
src/ur5e_benchmark/: CMakeLists.txt  package.xml
src/ur5e_benchmark/results/control_strategy_comparison/: README.md  control_strategy_benchmark.csv  control_strategy_summary.csv
src/ur5e_benchmark/results/planner_comparison/: README.md  planner_benchmark.csv  planner_summary.csv  planner_target_summary.csv
src/ur5e_benchmark/scripts/: plot_control_benchmark.py  summarize_benchmarks.py
src/ur5e_benchmark/src/: control_strategy_benchmark.cpp  planner_benchmark.cpp
src/ur5e_bringup/: CMakeLists.txt  package.xml
src/ur5e_bringup/launch/: benchmark_control_strategies.launch.py  benchmark_planners.launch.py  demo_cartesian_waypoints.launch.py  demo_joint_goal.launch.py  demo_pose_goal.launch.py  planning_sim.launch.py  simulation.launch.py  view_model.launch.py
src/ur5e_dynamic_avoidance/: CMakeLists.txt  package.xml
src/ur5e_dynamic_avoidance/config/: scenes.yaml  targets.yaml
src/ur5e_dynamic_avoidance/launch/: obstacle_avoidance_demo.launch.py  obstacle_planner_benchmark.launch.py
src/ur5e_dynamic_avoidance/results/obstacle_benchmark/: README.md  obstacle_difficulty_summary.csv  obstacle_planner_benchmark.csv  obstacle_planner_summary.csv  obstacle_target_summary.csv
src/ur5e_dynamic_avoidance/scripts/: plot_obstacle_benchmark.py  summarize_dynamic_benchmark.py
src/ur5e_dynamic_avoidance/src/: dynamic_avoidance_demo.cpp  dynamic_planner_benchmark.cpp  moving_obstacle_scene.cpp
src/ur5e_kinematics/: CMakeLists.txt  README.md  package.xml
src/ur5e_kinematics/include/ur5e_kinematics/: ur5e_kinematics.hpp
src/ur5e_kinematics/src/: kinematics_benchmark.cpp  ur5e_kinematics.cpp
src/ur5e_kinematics/test/: test_kdl_reference.cpp  test_ur5e_kinematics.cpp
src/ur5e_motion_demo/: CMakeLists.txt  package.xml
src/ur5e_motion_demo/results/cartesian_tracking/: README.md  trajectory_tracking_summary.csv
src/ur5e_motion_demo/scripts/: plot_trajectory_log.py
src/ur5e_motion_demo/src/: cartesian_waypoints_demo.cpp  joint_goal_demo.cpp  pose_goal_demo.cpp  trajectory_recorder.cpp
src/ur_description/: README.md  package.xml
src/ur_description/config/ur5e/: joint_limits.yaml  physical_parameters.yaml
src/ur_description/launch/: view_ur.launch.py  view_ur.launch.xml
src/ur_description/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
src/ur_description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
src/ur_description/urdf/inc/: ur_common.xacro  ur_transmissions.xacro
src/ur_moveit_config/: CMakeLists.txt  package.xml
src/ur_moveit_config/config/: controllers.yaml  joint_limits.yaml  ompl_planning.yaml
src/ur_moveit_config/launch/: ur_moveit.launch.py
src/ur_moveit_config/rviz/: view_robot.rviz
src/ur_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
src/ur_moveit_config/ur_moveit_config/: launch_common.py
src/ur_simulation_gazebo/: package.xml
src/ur_simulation_gazebo/config/: ros2_controllers.yaml
src/ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
src/ur_simulation_gazebo/test/: test_common.py  test_gazebo.py
