<?xml version="1.0"?>
<package format="3">
  <name>ur5e_benchmark</name>
  <version>0.1.0</version>
  <description>Benchmark nodes and analysis scripts for UR5e planning and tracking experiments.</description>
  <maintainer email="fishros@foxmail.com">ubuntu22</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>

  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
