<?xml version="1.0"?>
<package format="3">
  <name>ur5e_bringup</name>
  <version>0.1.0</version>
  <description>Unified launch entry points for the UR5e planning and simulation project.</description>
  <maintainer email="fishros@foxmail.com">ubuntu22</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_simulation_gazebo</exec_depend>
  <exec_depend>ur5e_motion_demo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
