<?xml version="1.0"?>
<package format="3">
  <name>ur5e_dynamic_avoidance</name>
  <version>0.1.0</version>
  <description>Dynamic obstacle avoidance tasks and planner benchmarks for the UR5e simulation project.</description>
  <maintainer email="fishros@foxmail.com">ubuntu22</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_simulation_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
