<?xml version="1.0"?>
<package format="3">
  <name>ur5e_kinematics</name>
  <version>0.1.0</version>
  <description>Self-developed UR5e forward kinematics, Jacobian and numerical inverse kinematics.</description>
  <maintainer email="lbl@example.com">Li Baolin</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>kdl_parser</test_depend>
  <test_depend>orocos_kdl</test_depend>
  <test_depend>ur_description</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
